0.0.4
1st release

0.0.5
Added case insensitive search.
Function menu updated on save file.
Added revert.
Added GUI for Prefs.
Added save state of search sensitive to rc file.
Added teminal command to prefs.
Code clean.
Bug Fix.
Updated Help file.

0.0.6
Added wrap for search replace.
Dim function menu when no functions available.
Apply prefs immedietly.
Added save search wrap mode

0.0.7
Removed 'Save-As' from toolbar.
Added save/restore session
Added simple bookmarks

0.0.8
Can now use escapes in search/replace \n, \t etc.
Added monitor for file changed on disk.
Code clean.
Added go to line number in navigation menu.
Added run async external tool.
Help now runs async.
Set new env variable to selected text.
Added Find API to installed tools.

0.0.9
Added external tool creater GUI.
Bug fix crash on closing empty new tab.
Set senitive on save/saveas buttons menu items on startup.
Completly redone external tools.
Checked build with lower version of gtksourceview (2.9.9) but 2.11.1 recommended.
Added GUI to build external tools.

0.0.10
Bug fix - seg fault on run external tool with no tabs.
Added Replace all
Added 'Go To Definition' to popup menu in document.
Added popup menu to tabs to copy filepath/name.

0.0.11
Added selected function def to popupmenu.
Added show functions def in popupmenu.
Fixed defines that contain : or / not displaying.
Added version number to tarball.
Strpped whitespace from bookmark label;
Go To Definition not shown in popup if not available.
Selecting function def in popup copies def to clipboard.
Added new icon.
Code clean.
Set recursive search for tags (default = 1).
Added Search For Define to Navigation menu.

0.0.12
Do simple conversion to/from UTF-8.
Added "Search https://developer.gnome.org" to nav menu.
Added "Open As Hexdump" to file menu.
Added number to untitled docs.
Made application single instance.
Major Code clean.